--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
       left:250px;
       top: 50px;
     }
-    @media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
-      html {
-        transform: rotate(-90deg);
-        transform-origin: left top;
-        width: 100vh;
-        overflow-x: hidden;
-        position: absolute;
-        top: 100%;
-        left: 0;
+    @media only screen and (orientation:portrait){
+      body {
+        height: 100vw;
+        transform: rotate(90deg);
       }
     }
     /* video {
