--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><title>Document</title><script defer="defer" src="app.js"></script></head><body class="p-5 pt-3 mt-0"><div class="d-flex"><video id="video" width="100%" autoplay><img style="width: 90%" class="overlay" src="https://www.clipartmax.com/png/full/107-1072165_free-vector-human-face-glasses-clip-art-line-art-face.png"></video></div><div class="d-flex mt-3"><button class="btn btn-warning me-2" id="flip-button">Flip Camera.</button> <button class="btn btn-success me-2" id="start-record">Start Recording</button> <button class="btn btn-danger me-2" id="stop-record">Stop Recording</button> <a class="btn btn-info" id="download-video" download="test.webm">Download Video</a></div><style>.overlay {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><title>Document</title><script defer="defer" src="app.js"></script></head><body class="p-5 pt-3 mt-0"><div class="d-flex"><video id="video" width="100%" autoplay><img style="width: 90%" class="overlay" src="https://www.clipartmax.com/png/full/107-1072165_free-vector-human-face-glasses-clip-art-line-art-face.png"></video></div><div class="d-flex mt-3"><button class="btn btn-warning me-2" id="flip-button">Flip Camera</button> <button class="btn btn-success me-2" id="start-record">Start Recording</button> <button class="btn btn-danger me-2" id="stop-record">Stop Recording</button> <a class="btn btn-info" id="download-video" download="test.webm">Download Video</a></div><style>.overlay {
       display: none;
       position: absolute;
       left:250px;
       top: 50px;
     }
-    @media only screen and (orientation:portrait){
+    /* @media only screen and (orientation:portrait){
       body {
         height: 100vw;
         transform: rotate(90deg);
       }
-    }
+    } */
     /* video {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
