--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
       left:250px;
       top: 50px;
     }
+    @media (orientation: landscape) {
+      body {
+        padding-left:6rem;
+        padding-right: 6rem;
+      }
+    }
     /* @media only screen and (orientation:portrait){
       body {
         height: 100vw;
