--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><title>Document</title><script defer="defer" src="app.js"></script></head><body><div class="d-flex"><div id="videoContainer"><video id="video" width="100%" autoplay><img style="width: 90%" class="overlay" src="https://www.clipartmax.com/png/full/107-1072165_free-vector-human-face-glasses-clip-art-line-art-face.png"></video></div></div><div class="d-flex mt-3 justify-content-center" style="position: fixed; bottom: 20px; width: 100%"><button class="btn btn-warning me-2" id="flip-button">Flip Camera</button> <button class="btn btn-success me-2" id="start-record">Start Recording</button> <button class="btn btn-danger me-2" id="stop-record">Stop Recording</button> <a class="btn btn-info" id="download-video" download="test.webm">Download Video</a></div><style>.overlay {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><title>Document</title><script defer="defer" src="app.js"></script></head><body><div class="d-flex"><div id="videoContainer"><video id="video" width="100%" autoplay></video><img class="overlay" src="https://www.clipartmax.com/png/full/107-1072165_free-vector-human-face-glasses-clip-art-line-art-face.png"><div class="d-flex mt-3 justify-content-center buttons"><button class="btn btn-warning me-2" id="flip-button">Flip Camera</button> <button class="btn btn-success me-2" id="start-record">Start Recording</button> <button class="btn btn-danger me-2" id="stop-record">Stop Recording</button> <a class="btn btn-info" id="download-video" download="test.webm">Download Video</a></div></div></div><style>.buttons {
+      position: absolute;
+      right: 20px;
+      /* width: 100%; */
+      /* height: 100%; */
+      top: 0;
+      flex-direction: column;
+      align-items: center;
+      height: 100%;
+    }
+    .overlay {
       display: none;
       position: absolute;
-      left:250px;
-      top: 50px;
+      left:0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto;
     }
     #videoContainer {
       box-sizing: border-box;
-      height: 100%;
-      overflow: hidden;
       width: 100%;
+      overflow: hidden;
+      height: 100vh;
+      position: relative;
     }
-    video {  height: 100vh;}
+    video {  height: 100%;}
     @media (orientation: landscape) {
       body {
       
