--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       top: 0;
       bottom: 0;
       margin: auto;
+      padding-right: 10rem;
+      height: 60vh;
     }
     #videoContainer {
       box-sizing: border-box;
