--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
       position: absolute;
       left:0;
       right: 0;
-      top: 0;
-      bottom: 0;
+      top: 10%;
       margin: auto;
       padding-right: 10rem;
-      height: 60vh;
+      height: 85vh;
     }
     #videoContainer {
       box-sizing: border-box;
